--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -53,15 +53,11 @@
     <footer class="text-center mt-4 text-muted">
         <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/app.js"></script>
     <script>
-    // Inicialización de Supabase (ya debería estar en tu código)
-    const supabaseUrl = "https://jxucinwtreugfehjfgkx.supabase.co";
-    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4dWNpbnd0cmV1Z2ZlaGpmZ2t4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMDgwMjEsImV4cCI6MjA3OTc4NDAyMX0.ssWcoQwUzxIGYArzb3porS8JxFecaebZV_SMhnh98nM"; // Reemplaza con tu clave real
-    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
-
+ 
     // Función wrapper asíncrona para onload
     async function cargarTablaAsync(tipo) {
         await cargarTabla(tipo);
