--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -6,6 +6,8 @@
     <title>Profesores</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body class="bg-light" onload="cargarTabla('profesores')">
     <header class="bg-primary text-white text-center py-3">
@@ -22,7 +24,7 @@
     <main class="container mt-4">
         <section class="bg-white p-4 rounded shadow mb-4">
             <h2>Agregar Profesor</h2>
-            <form id="form-profesores" class="d-flex flex-column">
+            <form id="profesores-form" class="d-flex flex-column">
                 <label for="nombre" class="form-label">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" required minlength="3" class="form-control mb-3">
                 <label for="especialidad" class="form-label">Especialidad:</label>
@@ -53,11 +55,9 @@
     <footer class="text-center mt-4 text-muted">
         <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="js/app.js"></script>
+
     <script>
- 
+
     // Función wrapper asíncrona para onload
     async function cargarTablaAsync(tipo) {
         await cargarTabla(tipo);
@@ -123,6 +123,7 @@
         }
     }
 
+
     // Event listener para el formulario (ahora asíncrono)
     document.getElementById('profesores-form').addEventListener('submit', async function(event) {
         event.preventDefault();
@@ -134,6 +135,6 @@
         this.reset(); // Limpiar formulario
     });
 </script>
-
+<script src="./js/app.js"></script>
 </body>
 </html>
