--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -4,68 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profesores</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Script de Supabase (debe estar aquí para cargar antes) -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
-<body class="bg-light" onload="cargarTabla('profesores')">
-    <header class="bg-primary text-white text-center py-3">
-        <h1>Módulo de Profesores</h1>
-    </header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="login.html">Volver al Login</a></li>
-            <li class="nav-item"><a class="nav-link" href="cursos.html">Cursos</a></li>
-            <li class="nav-item"><a class="nav-link" href="estudiantes.html">Estudiantes</a></li>
-            <li class="nav-item"><a class="nav-link" href="registro.html">Registro</a></li>
-        </ul>
-    </nav>
-    <main class="container mt-4">
-        <section class="bg-white p-4 rounded shadow mb-4">
-            <h2>Agregar Profesor</h2>
-            <form id="profesores-form" class="d-flex flex-column">
-                <label for="nombre" class="form-label">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" required minlength="3" class="form-control mb-3">
-                <label for="especialidad" class="form-label">Especialidad:</label>
-                <input type="text" id="especialidad" name="especialidad" required class="form-control mb-3">
-                <button type="submit" class="btn btn-success">Agregar</button>
-            </form>
-        </section>
-        <section class="bg-white p-4 rounded shadow">
-            <h2>Lista de Profesores</h2>
-            <form action="#" method="get" class="mb-3">
-                <label for="busqueda" class="form-label">Buscar por especialidad:</label>
-                <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese especialidad" onkeyup="filtrarTablaAsync('profesores', this.value)">
-                <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
-            </form>
-            <table id="profesores-table" class="table table-striped">
-                <thead class="table-primary">
-                    <tr>
-                        <th>ID</th>
-                        <th>Nombre</th>
-                        <th>Especialidad</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </section>
-    </main>
-    <footer class="text-center mt-4 text-muted">
-        <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
-    </footer>
+<body>
+    <!-- Tu contenido HTML aquí (formulario, tabla, etc.) -->
+    <h1>Profesores</h1>
+    <form id="profesores-form">
+        <input type="text" id="nombre" placeholder="Nombre" required>
+        <input type="text" id="especialidad" placeholder="Especialidad" required>
+        <button type="submit">Agregar</button>
+    </form>
+    <table id="profesores-table" class="table">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Especialidad</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
     <script>
-        // Inicialización de Supabase (debe estar al inicio)
+        // Inicialización de Supabase (al inicio del script)
         const supabaseUrl = "https://jxucinwtreugfehjfgkx.supabase.co";
-        const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4dWNpbnd0cmV1Z2ZlaGpmZ2t4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMDgwMjEsImV4cCI6MjA3OTc4NDAyMX0.ssWcoQwUzxIGYArzb3porS8JxFecaebZV_SMhnh98nM";
+        const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4dWNpbnd0cmV1Z2ZlaGpmZ2t4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMDgwMjEsImV4cCI6MjA3OTc4NDAyMX0.ssWcoQwUzxIGYArzb3porS8JxFecaebZV_SMhnh98nM"; // Reemplaza con tu clave real de Supabase
         const supabase = supabase.createClient(supabaseUrl, supabaseKey);
-
-        // Función wrapper asíncrona para onload
-        async function cargarTablaAsync(tipo) {
-            await cargarTabla(tipo);
-        }
 
         // Función para cargar la tabla
         async function cargarTabla(tipo) {
@@ -126,6 +94,11 @@
                 }
             }
         }
+
+        // Event listener para cargar la tabla al cargar la página
+        window.addEventListener('load', async function() {
+            await cargarTabla('profesores');
+        });
 
         // Event listener asíncrono para el formulario
         document.getElementById('profesores-form').addEventListener('submit', async function(event) {
