--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- Supabase se cargará en el script module al final -->
   </head>
   <body>
     <header class="bg-primary text-white text-center py-3">
@@ -90,12 +90,15 @@
       <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
     </footer>
 
-    <script>
-      // Inicialización de Supabase (al inicio del script)
+    <script type="module">
+      // Importar Supabase desde esm.sh (compatible con módulos ES)
+      import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
+
+      // Inicialización de Supabase
       const supabaseUrl = "https://jxucinwtreugfehjfgkx.supabase.co";
       const supabaseKey =
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4dWNpbnd0cmV1Z2ZlaGpmZ2t4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMDgwMjEsImV4cCI6MjA3OTc4NDAyMX0.ssWcoQwUzxIGYArzb3porS8JxFecaebZV_SMhnh98nM"; // Reemplaza con tu clave real de Supabase
-      const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4dWNpbnd0cmV1Z2ZlaGpmZ2t4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMDgwMjEsImV4cCI6MjA3OTc4NDAyMX0.ssWcoQwUzxIGYArzb3porS8JxFecaebZV_SMhnh98nM";
+      const supabase = createClient(supabaseUrl, supabaseKey);
 
       // Función para cargar la tabla
       async function cargarTabla(tipo) {
@@ -168,6 +171,7 @@
         }
       }
 
+      // Función para filtrar la tabla
       function filtrarTabla(tipo, valor) {
         const tbody = document.querySelector(`#${tipo}-table tbody`);
         const rows = tbody.querySelectorAll("tr");
@@ -180,14 +184,15 @@
           }
         });
       }
+
       // Event listener para cargar la tabla al cargar la página
       window.addEventListener("load", async function () {
         await cargarTabla("profesores");
       });
 
-      // Event listener asíncrono para el formulario
+      // Event listener asíncrono para el formulario (corregido el ID)
       document
-        .getElementById("profesores-form")
+        .getElementById("form-profesores")  // Corregido: coincide con el ID del HTML
         .addEventListener("submit", async function (event) {
           event.preventDefault();
           const formData = {
