--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -59,7 +59,7 @@
       </section>
       <section class="bg-white p-4 rounded shadow">
         <h2>Lista de Profesores</h2>
-        <form action="#" method="get" class="mb-3">
+        <form id="form-busqueda" action="#" method="get" class="mb-3">  <!-- Agregado id="form-busqueda" -->
           <label for="busqueda" class="form-label"
             >Buscar por especialidad:</label
           >
@@ -69,7 +69,6 @@
             name="busqueda"
             class="form-control"
             placeholder="Ingrese especialidad"
-        
           />
           <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
         </form>
@@ -171,18 +170,26 @@
         }
       }
 
-      // Función para filtrar la tabla
+      // Función para filtrar la tabla (mejorada para mostrar todas si el valor está vacío)
       function filtrarTabla(tipo, valor) {
         const tbody = document.querySelector(`#${tipo}-table tbody`);
         const rows = tbody.querySelectorAll("tr");
-        rows.forEach((row) => {
-          const especialidad = row.cells[2].textContent.toLowerCase(); // Asumiendo que "Especialidad" es la tercera columna (índice 2)
-          if (especialidad.includes(valor.toLowerCase())) {
+        if (valor.trim() === "") {
+          // Si el valor está vacío, mostrar todas las filas
+          rows.forEach((row) => {
             row.style.display = "";
-          } else {
-            row.style.display = "none";
-          }
-        });
+          });
+        } else {
+          // Filtrar por especialidad (columna 2, índice 2)
+          rows.forEach((row) => {
+            const especialidad = row.cells[2].textContent.toLowerCase();
+            if (especialidad.includes(valor.toLowerCase())) {
+              row.style.display = "";
+            } else {
+              row.style.display = "none";
+            }
+          });
+        }
       }
 
       // Event listener para cargar la tabla al cargar la página
@@ -190,9 +197,9 @@
         await cargarTabla("profesores");
       });
 
-      // Event listener asíncrono para el formulario (corregido el ID)
+      // Event listener asíncrono para el formulario de agregar profesor
       document
-        .getElementById("form-profesores")  // Corregido: coincide con el ID del HTML
+        .getElementById("form-profesores")
         .addEventListener("submit", async function (event) {
           event.preventDefault();
           const formData = {
@@ -201,6 +208,15 @@
           };
           await insertarDato("profesores", formData);
           this.reset(); // Limpiar formulario
+        });
+
+      // Event listener para el formulario de búsqueda (nuevo)
+      document
+        .getElementById("form-busqueda")
+        .addEventListener("submit", function (event) {
+          event.preventDefault(); // Prevenir el envío por defecto
+          const valor = document.getElementById("busqueda").value;
+          filtrarTabla("profesores", valor);
         });
     </script>
   </body>
